Fixed radio button positioning by adding extra div and changing positioning and z-indexing

--- a/style.css
+++ b/style.css
@@ -182,13 +182,15 @@ input[type="radio"] {
   padding: 1rem;
   width: 3rem;
   height: 3rem;
-  position: relative;
-  right: 0;
+  position: absolute;
+  z-index: 0;
 }
 
 /* remove fielset border */
 fieldset {
   border: none;
+  margin: 0;
+  padding: 0;
 }
 
 input + label {
@@ -202,6 +204,8 @@ input + label {
   padding: 1rem;
   width: 3rem;
   height: 3rem;
+  position: relative;
+  z-index: 1;
 }
 
 input:checked + label {
@@ -216,14 +220,21 @@ input:focus-visible + label {
   border: solid 3px var(--orange);
 }
 
-.label-control {
+.label-group {
+  display: flex;
   position: relative;
-  right: 10%;
+}
+
+.label-control {
+  /* position: relative;
+  right: 10%; */
 }
 
 .radio-buttons-wrapper {
-  display: flex;
-  flex-flow: row nowrap;
+  /* display: flex;
+  flex-flow: row nowrap; */
+  display: grid;
+  grid-template-columns: repeat(5, auto);
 }
 
 .form-control {
@@ -269,5 +280,9 @@ input:focus-visible + label {
 @media screen and (min-width: 60rem) {
   .form-container {
     max-width: 25.75rem;
+  }
+
+  .submit-button {
+    width: 21rem;
   }
 }
